fixed wishlist endpoints
